deploy: ffec342e0c43d8e8b318360e68df8f9038ce79e4

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div>
 <ul class=post-list>
 <div class=post-list-item>
-<li><a href=https://cyucelen.github.io/posts/consumer-driven-contract-on-trunk-based-development-pipelines/>Consumer Driven Contract testing on trunk based development pipelines using Pact</a></li>
+<li><a href=https://acikkaymak.com/posts/consumer-driven-contract-on-trunk-based-development-pipelines/>Consumer Driven Contract testing on trunk based development pipelines using Pact</a></li>
 <div class=post-list-date>Sun, Aug 22, 2021</div>
 </div>
 </ul>
