--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </ul>
 </div>
 </main>
-</div><div id=footer>
+</div><div id=footer class=container>
 <div class=copyright>
 Copyright 2021
 </div>
