--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 <div>
 <ul class=post-list>
 <div class=post-list-item>
+<li><a href=https://acikkaymak.com/posts/trade-offs-you-should-consider-while-designing-nosql-documents/>Trade-offs you should consider while designing NoSQL documents</a></li>
+<div class=post-list-date>Mon, Oct 11, 2021</div>
+</div>
+<div class=post-list-item>
 <li><a href=https://acikkaymak.com/posts/consumer-driven-contract-on-trunk-based-development-pipelines/>Consumer Driven Contract testing on trunk based development pipelines using Pact</a></li>
 <div class=post-list-date>Sun, Aug 22, 2021</div>
 </div>
